--- a/doc/lispref/variables.texi
+++ b/doc/lispref/variables.texi
@@ -2839,7 +2839,9 @@ the value.  For instance:
 
 This will first check whether the value has changed in a different
 Emacs instance, retrieve that value, and then add 1 to that value, and
-then store it.
+then store it.  But note that this is done without locking, so if many
+instances are updating the value at the same time, it's unpredictable
+which instance ``wins''.
 @end defun
 
 @defun list-multisession-values
